# tezos-oxymeter

./: .gitmodules  CHANGES  CHANGES.md  Makefile  README.md  dune  dune-project  index.html  index.md  ppx-tezos_oxymeter.opam  ppx-tezos_oxymeter.opam.template  tezos_oxymeter.opam  tezos_oxymeter.opam.template
.github/workflows/: gh-pages.yml
docs/: description.md
examples/: dune  example_oxymeter.ml  example_ppx.ml  main.ml  metrics_config.json
lib/: dune  mammut_oxymeter.ml  mammut_oxymeter.mli  metrics.ml  report.ml  report.mli  smartpower.ml  smartpower.mli  tezos_oxymeter.ml  tezos_oxymeter.mli
no_mammut/ppx-tezos_oxymeter/: index.html
no_mammut/ppx-tezos_oxymeter/Ppx_oxymeter/: index.html
no_mammut/ppx-tezos_oxymeter/Ppx_oxymeter/class-oxymeter_mapper_v3/: index.html
no_mammut/tezos_oxymeter/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Args/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/EnergyMeasure/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/EnergyMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/MakeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/MakeMetrics/argument-1-M/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/TimeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/module-type-MEASURE/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Metrics/module-type-METRICS/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Observer/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter/Observer/Blind/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/EnergyMeasure/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/EnergyMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/MakeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/TimeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Metrics/module-type-METRICS/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Observer/Mock/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Observer/Smartpower/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Report/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Utils/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__/Utils/Args/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/EnergyMeasure/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/EnergyMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/MakeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/MakeMetrics/argument-1-M/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/TimeMeasure/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/TimeMetrics/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Metrics/module-type-METRICS/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Observer/Blind/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Report/: index.html
no_mammut/tezos_oxymeter/Tezos_oxymeter__Utils/Args/: index.html
ppx/: dune  ppx_oxymeter.ml
ppx-tezos_oxymeter/Ppx_oxymeter/class-oxymeter_mapper_v3/: index.html
scripts/: build-switch  dependencies  gateway
src/: dune  mammut_oxymeter.mli  report.ml
src/lib/: dune  index.mld  mammut_oxymeter.mli  metrics.ml  metrics.mli  observer.ml  observer.mli  report.ml  report.mli  smartpower.ml  smartpower.mli  tezos_oxymeter.ml  tezos_oxymeter.mli  utils.ml  utils.mli
src/ppx/: dune  index.mld  metrics.ml  ppx_oxymeter.ml  utils.mli
src/utils/: dune
tezos_oxymeter/Tezos_oxymeter/: index.html
tezos_oxymeter/Tezos_oxymeter/Metrics/EnergyMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter/Metrics/TimeMeasure/: index.html
tezos_oxymeter/Tezos_oxymeter/Observer/Mock/: index.html
tezos_oxymeter/Tezos_oxymeter/Observer/Smartpower/: index.html
tezos_oxymeter/Tezos_oxymeter/Report/: index.html
tezos_oxymeter/Tezos_oxymeter__/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/MakeMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/MakeMetrics/argument-1-M/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/TimeMeasure/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/TimeMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/module-type-MEASURE/: index.html
tezos_oxymeter/Tezos_oxymeter__/Metrics/module-type-METRICS/: index.html
tezos_oxymeter/Tezos_oxymeter__/Observer/: index.html
tezos_oxymeter/Tezos_oxymeter__/Observer/Blind/: index.html
tezos_oxymeter/Tezos_oxymeter__/Smartpower/: index.html
tezos_oxymeter/Tezos_oxymeter__/Utils/Args/: index.html
tezos_oxymeter/Tezos_oxymeter__/Utils/JSON/: index.html
tezos_oxymeter/Tezos_oxymeter__/Utils/Name/: index.html
tezos_oxymeter/Tezos_oxymeter__/Utils/Sys/: index.html
tezos_oxymeter/Tezos_oxymeter__Metrics/: index.html
tezos_oxymeter/Tezos_oxymeter__Metrics/EnergyMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter__Metrics/MakeMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter__Metrics/TimeMetrics/: index.html
tezos_oxymeter/Tezos_oxymeter__Metrics/module-type-MEASURE/: index.html
tezos_oxymeter/Tezos_oxymeter__Observer/: index.html
tezos_oxymeter/Tezos_oxymeter__Observer/Mock/: index.html
tezos_oxymeter/Tezos_oxymeter__Observer/Smartpower/: index.html
tezos_oxymeter/Tezos_oxymeter__Smartpower/: index.html
tezos_oxymeter/Tezos_oxymeter__Utils/: index.html
tezos_oxymeter/Tezos_oxymeter__Utils/JSON/: index.html
tezos_oxymeter/Tezos_oxymeter__Utils/Name/: index.html
tezos_oxymeter/Tezos_oxymeter__Utils/Sys/: index.html
