(library
  (public_name tezos_oxymeter.metrics)
  (name metrics)
  (modules metrics)
  (library_flags (:standard -w -49 -linkall))
  (libraries tezos_oxymeter.utils
             unix
             ezjsonm))

(library
  (public_name tezos_oxymeter.utils)
  (name utils)
  (modules utils)
  (libraries ezjsonm))

